# RARAR.py

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
docs/: rarar.tex
docs/technotes/: rar1.5-technote.txt  rar2.5-technote.txt  rar3-technote.txt  rar4-technote.txt  rar5-technote.txt
rarar/: __init__.py  cli.py  const.py  exceptions.py  models.py  reader.py
rarar/reader/: __init__.py  base.py  factory.py  http_file.py  rar3.py  rar4.py  rar5.py
src/rarar/: __init__.py  cli.py  const.py  exceptions.py  models.py
src/rarar/reader/: __init__.py  base.py  factory.py  http_file.py  multipart_file.py  rar3.py  rar5.py
tests/: test_http_file.py  test_models.py  test_multipart_file.py  test_rar5_reader.py  test_reader_factory.py  test_unrar_cli_fallback.py
