[project]
name = "rarar"
version = "0.1.0"
description = "Random Access RAR Reader - Access RAR archives without loading the entire file into memory, compatible with HTTP range requests."
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Elias Benbourenane", email = "eliasbenbourenane@gmail.com" },
]
maintainers = [
    { name = "Elias Benbourenane", email = "eliasbenbourenane@gmail.com" },
]

dependencies = ["httpx[http2]>=0.28.1"]

[project.urls]
Homepage = "https://github.com/eliasbenb/RARAR.py"
Documentation = "https://github.com/eliasbenb/RARAR.py"
Source = "https://github.com/eliasbenb/RARAR.py"
Issues = "https://github.com/eliasbenb/RARAR.py/issues"

[project.scripts]
rarar = "rarar.cli:main"

[tool.ruff]
indent-width = 4
line-length = 88

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["B", "D", "DOC", "E", "F", "I", "RUF", "SIM", "UP", "W"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.build-backend]
module-name = "rarar"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ruff>=0.15.1", "ty>=0.0.17", "pytest>=9.0.2"]
